--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "express": "^4.17.1",
     "mem": "^6.0.1",
+    "mongodb": "^3.5.2",
+    "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -19,7 +22,9 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
