--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   "dependencies": {
     "expo": "~36.0.0",
     "express": "^4.17.1",
+    "link": "^0.1.5",
     "mem": "^6.0.1",
     "mongodb": "^3.5.2",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
+    "react-native-drawer": "^2.5.1",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.5.6",
+    "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-side-drawer": "^1.2.5",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.15",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
