--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "express": "^4.17.1",
     "link": "^0.1.5",
@@ -16,14 +17,16 @@
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "^0.61.5",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.6",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
+    "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-side-drawer": "^1.2.5",
+    "react-native-tab-view": "^2.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
